@@ -15,7 +15,7 @@ Wagtail 4.1 is designated a Long Term Support (LTS) release. Long Term Support r
 
  * Add basic keyboard control and screen reader support for page listing re-ordering (Paarth Agarwal, Thomas van der Hoeven)
  * Add `PageQuerySet.private` method as an alias of `not_public` (Mehrdad Moradizadeh)
-
+ * Most images in the admin will now only load once they are visible on screen (Jake Howard)
  * Allow setting default attributes on image tags [](adding_default_attributes_to_images) (Jake Howard)
 
 ### Bug fixes
