@@ -1,7 +1,7 @@
 {% load wagtailadmin_tags %}
 
 <span class="avatar small">
-    <img src="{% avatar_url user size=25 %}" alt="" />
+    <img src="{% avatar_url user size=25 %}" alt="" decoding="async" loading="lazy"/>
 </span>
 
 {% if not username %}{{ user }}{% else %}{{ username }}{% endif %}
